tests/fail/destruct_named_mix_fail.tk
shape Point(x: i32, y: i32)

fn main() -> i32 {
    auto p = Point(x = 10, y = 20)
    // Cannot mix positional and named fields in destructuring
    auto Point(x = a, b) = p
    return 0
}
